--- a/github-explorer/src/components/Footer/Footer.css
+++ b/github-explorer/src/components/Footer/Footer.css
@@ -6,7 +6,7 @@
   color: white;
   margin: 20px;
   border-radius: 20px;
-  position: fixed;
+  position: relative;
   bottom: 10px;
   width: calc(100% - 40px);
   left: 48%;
