--- a/github-explorer/src/components/navbar/Navbar.css
+++ b/github-explorer/src/components/navbar/Navbar.css
@@ -102,6 +102,10 @@
 
 /* Responsive Style */
 @media (max-width: 768px) {
+  .navbar{
+    width: 90%;
+    padding: 1rem;
+  }
   .navbar-links {
     position: absolute;
     top: 70px;
@@ -123,4 +127,19 @@
   .hamburger {
     display: flex;
   }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .navbar {
+    width: 100%;
+  }
+  
+  
+}
+@media (min-width: 768px)  {
+  .navbar {
+    width: 95%;
+  }
+  
+  
 }
