--- a/github-explorer/src/components/RepoCard.css
+++ b/github-explorer/src/components/RepoCard.css
@@ -19,3 +19,16 @@
   padding: 8px;
   border-radius: 5px;
 }
+.bookmarks-page{
+  padding: 20px 20px 0;
+  background: #6f6d6d3f;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+  max-width: 600vw;
+  height: 100vh;
+  margin: 30px ;
+  overflow-y: auto;
+  scrollbar-width: none;
+}
+
+
