--- a/github-explorer/src/components/Footer/Footer.css
+++ b/github-explorer/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@
   backdrop-filter: blur(10px);
   background: rgba(255, 255, 255, 0.056);
   color: white;
-  margin: 20px ;
+  margin: 50px 20px 20px 20px;
   border-radius: 20px;
   position: relative;
   bottom: 10px;
