--- a/github-explorer/src/pages/services/Services.css
+++ b/github-explorer/src/pages/services/Services.css
@@ -63,3 +63,12 @@
     font-size: 1.6rem;
   }
 }
+.filter-img {
+  width: 100%;
+  height: auto;
+  margin-top: 0.2rem;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  margin-bottom: 1rem;
+}
